--- a/folklore.html
+++ b/folklore.html
@@ -298,7 +298,7 @@
             </div>
             <div>
                 <a href="index.html">
-                <img src="imgs/illustration2.png">
+                <img src="imgs/Illustration2.png">
                 </a>
             </div>
             <div>
