--- a/styles.html
+++ b/styles.html
@@ -155,7 +155,7 @@
             </div>
             <div>
                 <a href="index.html">
-                <img src="imgs/illustration2.png">
+                <img src="imgs/Illustration2.png">
                 </a>
             </div>
             <div>
