--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
             <div>
                 <a href="index.html">
-                <img src="imgs/illustration2.png" alt="footerlogo">
+                <img src="imgs/Illustration2.png" alt="footerlogo">
                 </a>
             </div>
             <div>
