--- a/media.html
+++ b/media.html
@@ -299,7 +299,7 @@
         <div class="footer-grid container wrapper">
             <div>
                 <p class="footercopyright">
-                    2022 Copyright John (J.J.) Llorin. <br>All Rights Reserved.
+                    2022 Copyright John/Jester (J.J.) Llorin. <br>All Rights Reserved.
                     <br> NMED 3250-B Web Design
                 </p>
             </div>
